--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -6,7 +6,7 @@
   display: inline-block;
   position: relative;
 }
-.course-info span {
+span.superscript-title {
   padding-left: 35px;
   margin: 0;
   color: #939393;
@@ -27,4 +27,24 @@
 }
 .panel-group .panel {
   margin-bottom: 20px;
+}
+
+// Alignment Settings for Submit Button of the search form
+.btn-submit {
+    text-align:left;
+}
+@media screen and (min-width: 992px) {
+  .fixed-aside {
+    position: fixed;
+  }
+  .search-result {
+    z-index: 2;
+  }
+  .search-form {
+    width: 41.5%;
+    margin-top: 40px;
+  }
+  .btn-submit {
+    text-align: right;
+  }
 }
